--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -4,6 +4,7 @@
 @import "./layout";
 @import "./qa";
 @import "./index";
+@import "./series";
 
 body {
   font-family: 'Roboto', 'Noto Sans TC', sans-serif;
